# ha-elisa-kotiakku

./: .env.example  .gitignore  .gitmessage  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  MAINTAINERS.md  README.md  RELEASE_NOTES_1.1.0.md  hacs.json  pyproject.toml  requirements-test.txt
.github/: dependabot.yml  release-notes-template.md
.github/workflows/: api-contract.yml  ci.yml  hacs.yml  hassfest.yml  release.yml
custom_components/elisa_kotiakku/: __init__.py  analytics.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  economics_engine.py  energy_store.py  entity.py  manifest.json  payback.py  processing.py  sensor.py  sensor_derived.py  sensor_energy.py  sensor_measurement.py  services.yaml  strings.json  tariff.py  util.py
custom_components/elisa_kotiakku/translations/: en.json  fi.json
docs/: automation-examples.yaml  dashboard-example.yaml  development.md  release-checklist.md  utility-meter-example.yaml
scripts/: __init__.py  check_api_contract.py  check_version_sync.py
tests/: conftest.py  test_analytics.py  test_api.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_economics_engine.py  test_energy_store.py  test_init.py  test_payback.py  test_processing.py  test_scripts.py  test_sensor.py  test_tariff.py  test_util.py
