[project]
name = "ha-elisa-kotiakku"
version = "1.0.0"
description = "Home Assistant custom integration for Elisa Kotiakku"
license = "MIT"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
show_error_codes = true
