[project]
name = "ha-elisa-kotiakku"
# Packaging metadata for local tooling only.
# This integration is not published on PyPI.
# Home Assistant runtime release version is defined in
# custom_components/elisa_kotiakku/manifest.json and git tags/releases.
version = "1.3.2"
description = "Home Assistant custom integration for Elisa Kotiakku"
license = "MIT"
requires-python = ">=3.12"

[tool.elisa_kotiakku]
publish_to_pypi = false
release_version_source = "custom_components/elisa_kotiakku/manifest.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["custom_components.elisa_kotiakku.config_flow"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["custom_components.elisa_kotiakku.coordinator"]
disable_error_code = ["has-type"]
